--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Limelight&family=Sora:wght@100..800&display=swap");
 
 :root {
-  --background-color-page: #820d0d;
+  --background-color-page: #818181;
   --color-primary: #3877ff;
   --color-text: #dcdcdc;
 }
