--- a/src/styles/information.css
+++ b/src/styles/information.css
@@ -1,26 +1,23 @@
-:root {
-  --background-color-page: #3a3a3a;
-  --color-primary: #3877ff;
-  --color-text: #dcdcdc;
-}
-
-
 .main-information {
    height: 100dvh;
   width: 100%;
-align-content: center;
+  align-content: center;
   animation: reveal linear both;
   animation-timeline: view();
   animation-range: entry 35% cover 40%;
- 
 }
 .main-information div{
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 2fr 3fr;
+  padding: 3%;
+  margin: 5%;
   align-items: center;
-   border: 2px var(--color-primary) solid;
+  background: linear-gradient(145deg, rgba(32, 32, 32, 0.75), rgba(45, 45, 45, 0.75));
+  border-radius: 15px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 
+              0 6px 20px rgba(0, 0, 0, 0.15); 
+ 
 }
-
 .author-image {
   width: 40dvh;
   height: 60dvh;
@@ -46,5 +43,12 @@ align-content: center;
     
   }
 }
-
+@media only screen and ( max-width: 600px){
+  .main-information div{
+    grid-template-columns: 1fr;
+  }
+  .author-image{
+  display: none;
+  }
+}
 
