--- a/src/styles/intro.css
+++ b/src/styles/intro.css
@@ -38,7 +38,7 @@
     animation-timeline: scroll(root block);
     animation-range: 0 90vh ;
 }
-.text-intro div{
+.text-presentation{
   display: grid;
   grid-template-columns: 1fr 1fr;
   text-align: center;
@@ -46,9 +46,10 @@
   animation: hide-text linear both;
   animation-timeline: scroll(root block);
   animation-range: 0 37vh ;
-  
+  width: 100%; 
 }
-.text-intro div::before {
+
+.text-presentation::before {
   content: "";
   position: absolute;
   height: 90%;
@@ -61,11 +62,11 @@
 .text-intro h1 {
   color: var(--color-primary);
   padding: 5px;
-  width:25dvw;
-  margin: 0 auto;
+  margin: 0 ;
   animation: presentation linear both;
   animation-timeline: scroll(root block);
   animation-range: 0 40vh ;
+  margin-right: 30%;
 }
 .text-intro p{
   color: var(--color-text);
@@ -73,14 +74,11 @@
   animation-timeline: scroll(root block);
   animation-range: 0 35vh ;     /*esto se hace mas angosto apartir de 40vh*/
   padding: 5px;
-  margin: 0 auto;
-  width:25dvw;
+  margin: 0 ;
+  margin-left: 30%;
 }
 .main-title{
-  color: var(--color-text);
-  font-size: 0px;
-  text-align: center;
-  width: 100%;
+  font-size: 0;
   animation: title-main linear both;
   animation-timeline: scroll(root block);
   animation-range: 0 85vh;
@@ -89,6 +87,9 @@
 @keyframes title-main{
   to{
     font-size: 16px;
+    color: var(--color-text);
+    text-align: center;
+    width: 100%;
   }
 }
 @keyframes text-intro{
@@ -119,28 +120,48 @@ to{
 }
 
 @media only screen and (max-width: 600px) {
-  .intro{
-    height: 0;
+ .text-intro {
+    gap: 15px;      
   }
   .photo{
-  display: none;
+    display: none;
   }
   .photo-movil{
-    position: fixed;
-    object-fit: cover;
-    z-index: 1;
-    display: flex;
-    height: 100dvh;
-    width: 100%;
+    display: inline;
+  position: fixed;
+  height: 100dvh;
+  width: 100%;
+  object-fit: cover;
+   inset: 0;
+  z-index: 1;
+  animation: presentation linear both;
+  animation-timeline: scroll(root block);
+  animation-range: 0 50vh;
   }
-
-  .text-intro h1{
-    margin: 0px;
-    width: 20vh;
-  }
-  .text-intro p{
-    margin: 0px;
-    width: 20vh;
-  }
-
+.text-presentation{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  position: relative;
+  animation: hide-text linear both;
+  animation-timeline: scroll(root block);
+  animation-range: 0 37vh ;
+  
 }
+  .text-intro h1 {
+    width: 100%;
+    font-size: 16px;
+    margin: 0; 
+   
+  }
+
+  .text-intro p {
+    width: 100%;
+    font-size: 14px;
+    margin: 0 ; 
+    
+  }
+}
+
+
+
+
